spacing issue fix

--- a/src/components/ContactList/ContactList.module.scss
+++ b/src/components/ContactList/ContactList.module.scss
@@ -53,7 +53,7 @@
     display: flex;
     gap: 20px;
     transition: all ease .3;
-    margin: 10px 20px;
+    margin: 5px 20px;
     border-radius: 5px;
     align-items: center;
     position: relative;
@@ -132,7 +132,7 @@
     display: flex;
     gap: 20px;
     transition: all ease .3;
-    margin: 10px 20px;
+    margin: 5px 20px;
     border-radius: 5px;
     align-items: center;
     position: relative;
